# IFT585-TP4-version-windows

./: .gitignore  GUIDE_CORRECTION.md  README.md  TP4_Rapport-Collectif.docx  Travail Pratique #3 — Rapport de Conception.docx
ift585-tp/: CMakeLists.txt  build.sh
ift585-tp/client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  InterfaceUtilisateur.cpp  InterfaceUtilisateur.h  Makefile  NetworkProvider.cpp  NetworkProvider.h  SurveillanceLocale.cpp  SurveillanceLocale.h  SyncEngine.cpp  SyncEngine.h  client.pro  main.cpp  moc_InterfaceUtilisateur.cpp
ift585-tp/common/: FileMetadata.h  UDPProtocol.h  json.h  platform.h  sha256.cpp  sha256.h
ift585-tp/server/: AuthUDPHandler.cpp  AuthUDPHandler.h  CMakeLists.txt  Makefile  PersistenceManager.cpp  PersistenceManager.h  RESTServer.cpp  RESTServer.h  ServerCore.cpp  ServerCore.h  main.cpp  server_ift585
ift585-tp/server/data/: clients.json  directories.json  invitations.json
ift585-tp/server/data/files/4e96ed58-0336-4653-83c8-7c045879cd48/: fichier_alain.txt  metadata.json
ift585-tp/server/data/files/5c8e7681-c11c-42d2-abea-be29d0974010/: metadata.json
ift585-tp/server/data/files/b4a72300-f312-44e3-85eb-9afb48502e7e/: metadata.json
